assets/style.css
.tr {
  width: 60%;
}

tr {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
}

td p {
  margin-bottom: 0%;
}

table#basic-table tr:nth-child(odd) {
  background-color: rgb(190, 190, 190);
}

.add-form {
  display: flex;
  flex-direction: column;
  width: 40%;
}

.book-form input {
  margin: 5px 0;
}

.row-data {
  margin-right: 30rem;
}

button {
  all: unset;
  border: 3px solid black;
  border-radius: 5%;
  padding: 0.2em 0.4rem;
  box-shadow: 4px 3px black;
  background: white;
  cursor: pointer;
  user-select: none;
}

